--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_install:
 script:
   - yarn run build
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t Thawsoar/happyfly-info:latest
-  - docker push Thawsoar/happyfly-info:latest
+  - docker build -t happyfly/happyfly-info:latest .
+  - docker push happyfly/happyfly-info:latest
