--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: node_js
 node_js:
-  - "12"
+  - stable
 services:
   - docker
+
 before_install:
   - yarn install
+
 script:
   - yarn run build
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t happyfly/happyfly-info:latest .
-  - docker push happyfly/happyfly-info:latest
+  - docker build -t thawsoar/happyfly-info:latest .
+  - docker push thawsoar/happyfly-info:latest
