--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ before_install:
 
 script:
   - yarn run build
-  - echo "$DOCKER_PASSWORD"
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t happyfly/happyfly-info:latest .
   - docker push happyfly/happyfly-info:latest
