--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ services:
 #   - yarn install
 
 before_script:
-  - echo "$DOCKER_PASSWORD" | winpty docker login -u "$DOCKER_USERNAME" --password-stdin
-  - echo "$DOCKER_PASSWORD"
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 script:
   # - yarn run build
   - docker build -t happyfly/happyfly-info:latest .
